# hcd_priya

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sim_list.txt
cli/: run.py
config/: default.yaml
docs/: SESSION_HANDOVER.md  SESSION_HANDOVER_2026_04_28.md  SESSION_HANDOVER_2026_05_05.md  SESSION_HANDOVER_2026_05_15.md  analysis.md  analysis_index.md  assumptions.md  benchmarking.md  bugs_found.md  cddf_model.md  clustering_definitions.md  clustering_multipole_jacobian_todo.md  clustering_test10_results.md  clustering_test11_results.md  data_layout.md  dla_truth_unmatched_analysis.md  dla_truth_validation.md  fake_spectra_integration.md  fast_mode_physics.md  figure_guide.md  hcd_mf_analysis.md  masking_strategy.md  multipole_jacobian_explained.md  p1d_definition.md  pipeline_overview.md
hcd_analysis/: __init__.py  catalog.py  cddf.py  clustering.py  config.py  dla_truth.py  hcd_template.py  io.py  lya_bias.py  masking.py  p1d.py  pipeline.py  report.py  snapshot_map.py  voigt_utils.py
scripts/: batch_convergence.sh  batch_greatlakes.sh  batch_hires.sh  batch_patch_per_class.sh  batch_patch_per_class_lf.sh  bootstrap_dndx_per_sim.py  build_emulator_cache.py  build_hcd_summary.py  common.py  diagnose_dla_truth_unmatched.py  diagnose_t2_geometry.py  fit_rogers_alpha.py  hf_lf_scalar_convergence.py  hf_lf_template_convergence.py  hypothesis_dndx_and_ap.py  install_greatlakes.sh  matched_pair_hr_vs_lf.py  mf_analytical_fit.py  mf_deviation_from_flat.py  mf_fit_and_residuals.py  mf_fourth_sim_test.py  mf_global_fit.py  mf_low_z_breakdown.py  (+23 more)
(+60 files in other folders)
